should work on mobile, put in canvas to avoid overlaying input field

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,27 +1,18 @@
 
- body {
+body {
   font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
   background: rgb(58,135,180);
   background: linear-gradient(90deg, rgba(58,135,180,0.17833070728291311) 0%, rgba(226,170,59,0.27356880252100846) 32%, rgba(252,69,83,0.25115983893557425) 100%);
  }
-
  input {
   padding: 8px .8em;
  }
  .input-form {
   margin: auto;
   width: 50%;
-  padding: 70px 0;
+  padding: 10px 0;
   color: #59575e;
  }
-
- #circleText {
-  position: relative;
-  z-index: 100;
-  touch-action: auto;
-  -webkit-touch-callout: default;
-}
-
 .circle {
   padding: 10px;
   position: absolute;
@@ -36,7 +27,6 @@
   justify-content: center;
   border-radius: 50%;
 }
-
 .button-8 {
   background-color: #e1ecf4;
   border-radius: 3px;
@@ -62,19 +52,67 @@
   vertical-align: baseline;
   white-space: nowrap;
 }
-
 .button-8:hover,
 .button-8:focus {
   background-color: #b3d3ea;
   color: #2c5777;
 }
-
 .button-8:focus {
   box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
 }
-
 .button-8:active {
   background-color: #a0c7e4;
   box-shadow: none;
   color: #2c5777;
+}
+
+canvas#matter-container {
+  background: rgb(58,135,180);
+  background: linear-gradient(90deg, rgba(58,135,180,0.17833070728291311) 0%, rgba(226,170,59,0.27356880252100846) 32%, rgba(252,69,83,0.25115983893557425) 100%);
+}
+
+#simulation-container {
+  position: relative;
+  width: 600px;
+  height: 600px;
+  margin: auto;
+}
+
+#matter-container {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  background: rgb(58, 135, 180);
+  background: linear-gradient(90deg, rgba(58, 135, 180, 0.17833070728291311) 0%, rgba(226, 170, 59, 0.27356880252100846) 32%, rgba(252, 69, 83, 0.25115983893557425) 100%) !important; 
+}
+
+#circles-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+canvas {
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  #simulation-container {
+    height: 100vw;
+    width: 60%;
+    margin: initial;
+  }
+
+  .input-form {
+    width: 90%;
+  }
+
+  .circle {
+    height: 50px;
+    width: 50px;
+    font-size: 0.8em;
+  }
 }
